# chip-8

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  mingw-toolchain.cmake
.github/workflows/: build.yml
include/: audio.h  chip8.h  display.h
src/: audio.c  chip8.c  display.c  main.c
